--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.40",
         "postcss-nesting": "^12.1.5",
+        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.4.7",
         "vite": "^5.0"
     },
     "dependencies": {
+        "jquery": "^3.7.1",
         "preline": "^2.4.0"
     }
 }
